syntax = "proto3";
package binout.userprofile;

option java_multiple_files = true;
option java_package = "binout.userprofile";
option java_outer_classname = "UserProfileProto";

message UserProfile {
  string user_id = 1;
  string city = 2;
  string service_provider = 3;
}

message UserRequest {
  string user_id = 1;
}

service UserProfileService {
  // Simple RPC for getting user profile by id
  rpc GetProfile(UserRequest) returns (UserProfile);
  // Server streaming RPC to send repeated user profiles
  rpc StreamProfiles(UserRequest) returns (stream UserProfile);
}
